[gd_scene load_steps=10 format=3 uid="uid://d8xrnob8i15r"]

[ext_resource type="Script" path="res://UI/hud.gd" id="1_04bju"]
[ext_resource type="Texture2D" uid="uid://beuthc3rus8od" path="res://UI/LeftGameUI.png" id="2_3q863"]
[ext_resource type="Texture2D" uid="uid://bod6x7osmw61r" path="res://UI/BarFill.png" id="3_ugq3e"]
[ext_resource type="Texture2D" uid="uid://8otolkdp2xj0" path="res://UI/RightGameUI.png" id="4_6yf2j"]
[ext_resource type="Texture2D" uid="uid://l2inyxy15mou" path="res://UI/XPBarFill.png" id="4_uykw4"]
[ext_resource type="Texture2D" uid="uid://c11f4u53jwrx2" path="res://weapons/pistol/pistol_icon.png" id="5_6okm4"]
[ext_resource type="Texture2D" uid="uid://bp7rke1fsxbm8" path="res://UI/sidebar_icon_background.png" id="5_30lvw"]

[sub_resource type="LabelSettings" id="LabelSettings_rkrnn"]
font_size = 7

[sub_resource type="LabelSettings" id="LabelSettings_4ylym"]
font_size = 10

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_04bju")

[node name="LeftPanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 96.0
grow_vertical = 2

[node name="LeftBackground" type="TextureRect" parent="LeftPanelContainer"]
layout_mode = 2
texture = ExtResource("2_3q863")

[node name="HealthBar" type="TextureProgressBar" parent="LeftPanelContainer/LeftBackground"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 8.0
offset_top = 42.0
offset_right = 88.0
offset_bottom = 62.0
value = 100.0
texture_progress = ExtResource("3_ugq3e")

[node name="HealthText" type="Label" parent="LeftPanelContainer/LeftBackground"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 32.0
offset_top = 17.0
offset_right = 64.0
offset_bottom = 31.0
text = "100/100"
label_settings = SubResource("LabelSettings_rkrnn")
horizontal_alignment = 1
vertical_alignment = 1

[node name="XPBar" type="TextureProgressBar" parent="LeftPanelContainer/LeftBackground"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 18.0
offset_top = 202.0
offset_right = 78.0
offset_bottom = 222.0
max_value = 11.0
texture_progress = ExtResource("4_uykw4")

[node name="GridContainer" type="GridContainer" parent="LeftPanelContainer/LeftBackground"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 28.0
offset_top = -74.0
offset_right = 98.0
offset_bottom = 11.0
grow_vertical = 2
theme_override_constants/h_separation = 41
theme_override_constants/v_separation = 56
columns = 2

[node name="UpgradeIcons" type="CenterContainer" parent="LeftPanelContainer/LeftBackground/GridContainer"]
layout_mode = 2
use_top_left = true

[node name="UpgradeBackground1" type="TextureRect" parent="LeftPanelContainer/LeftBackground/GridContainer/UpgradeIcons"]
layout_mode = 2
texture = ExtResource("5_30lvw")

[node name="UpgradeIcon1" type="TextureRect" parent="LeftPanelContainer/LeftBackground/GridContainer/UpgradeIcons"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("5_6okm4")

[node name="CenterContainer2" type="CenterContainer" parent="LeftPanelContainer/LeftBackground/GridContainer"]
layout_mode = 2
use_top_left = true

[node name="UpgradeBackground2" type="TextureRect" parent="LeftPanelContainer/LeftBackground/GridContainer/CenterContainer2"]
layout_mode = 2
texture = ExtResource("5_30lvw")

[node name="UpgradeIcon2" type="TextureRect" parent="LeftPanelContainer/LeftBackground/GridContainer/CenterContainer2"]
unique_name_in_owner = true
layout_mode = 2

[node name="CenterContainer3" type="CenterContainer" parent="LeftPanelContainer/LeftBackground/GridContainer"]
layout_mode = 2
use_top_left = true

[node name="UpgradeBackground3" type="TextureRect" parent="LeftPanelContainer/LeftBackground/GridContainer/CenterContainer3"]
layout_mode = 2
texture = ExtResource("5_30lvw")

[node name="UpgradeIcon3" type="TextureRect" parent="LeftPanelContainer/LeftBackground/GridContainer/CenterContainer3"]
unique_name_in_owner = true
layout_mode = 2

[node name="CenterContainer4" type="CenterContainer" parent="LeftPanelContainer/LeftBackground/GridContainer"]
layout_mode = 2
use_top_left = true

[node name="UpgradeBackground4" type="TextureRect" parent="LeftPanelContainer/LeftBackground/GridContainer/CenterContainer4"]
layout_mode = 2
texture = ExtResource("5_30lvw")

[node name="UpgradeIcon4" type="TextureRect" parent="LeftPanelContainer/LeftBackground/GridContainer/CenterContainer4"]
unique_name_in_owner = true
layout_mode = 2

[node name="RightPanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(96, 0)
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2

[node name="RightBackground" type="TextureRect" parent="RightPanelContainer"]
layout_mode = 2
texture = ExtResource("4_6yf2j")

[node name="ScoreText" type="Label" parent="RightPanelContainer/RightBackground"]
unique_name_in_owner = true
top_level = true
layout_mode = 2
anchor_left = 0.5
anchor_right = 0.5
offset_left = 241.0
offset_top = 45.0
offset_right = 337.0
offset_bottom = 71.0
grow_horizontal = 2
text = "SCORE:"
label_settings = SubResource("LabelSettings_4ylym")

[node name="HighScoreText" type="Label" parent="RightPanelContainer/RightBackground"]
unique_name_in_owner = true
top_level = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 242.0
offset_top = -282.0
offset_right = 302.0
offset_bottom = -248.0
grow_horizontal = 2
grow_vertical = 0
text = "HIGHSCORE: 
"
label_settings = SubResource("LabelSettings_4ylym")
horizontal_alignment = 1
vertical_alignment = 1
